<resources>
    <string name="app_name">语音闹钟</string>
    <string name="pm">pm.</string>
    <string name="date">今天</string>
    <string name="_08_30">08:30</string>
    <string name="ringtone_unknown">unknown</string>
    <string name="ringtone_silent">silent</string>
    <string name="delete">删除</string>
    <string name="allselect">全选</string>
    <string name="only_one">仅此一次</string>
    <string name="workday">周一到周五</string>
    <string name="everyday">每天</string>
    <string name="custom">自定义</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="addAlarmtext">添加闹钟</string>
    <string name="_08_00">08:00</string>
    <string name="ring">铃声</string>
    <string name="default_ring"><![CDATA[默认铃声>]]></string>
    <string name="repeattext">重复</string>
    <string name="default_one"><![CDATA[默认一次>]]></string>
    <string name="SpeechRecognition">语音识别</string>
</resources>